Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,22 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art Vandelay'"
+       "'art.vandelay@vandelay.co'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name"
+    "email"
    ]
   },
   {
